# scikit-learn-4x-python-lib

./: .gitignore  README.md  ReleaseNotes.md  deploy_to_pypi.sh  requirements.txt  setup.cfg
deployment/: config.py  create_classifier_unit_tests_data.py  deploy_utils.py  test_and_deploy.py
sklearn4x/: __init__.py  sklearn4x.py  test_func.py
sklearn4x/core/: BaseSerializer.py  BinaryBuffer.py  BinaryPackage.py  __init__.py
sklearn4x/core/file_versions/: BinaryPackageV1.py  __init__.py
sklearn4x/serializers/: __init__.py  serializers_list.py
sklearn4x/serializers/naive_bayes/: BernoulliNaiveBayesSerializer.py  CategoricalBayesSerializer.py  CategoricalNaiveBayesSerializer.py  ComplementNaiveBayesSerializer.py  GaussianNaiveBayesSerializer.py  MultinomialNaiveBayesSerializer.py  __init__.py
sklearn4x/serializers/preprocessings/: BinarizerSerializer.py  KBinsDiscretizerSerializer.py  LabelBinarizerSerializer.py  LabelEncoderSerializer.py  MaxAbsScalerSerializer.py  MinMaxScalerSerializer.py  MultiLabelBinarizerSerializer.py  NormalizerSerializer.py  OneHotEncoderSerializer.py  OrdinalEncoderSerializer.py  PolynomialFeaturesSerializer.py  PowerTransformerSerializer.py  QuantileTransformerSerializer.py  RobustScalerSerializer.py  SplineTransformerSerializer.py  StandardScalerSerializer.py  __init__.py
tests/: run_tests.py  test_binary_buffer.py
tests/unit_tests/: test_binary_buffer.py
tools/: classifier_template.py  create_data_test.py  test_preprocessing_classes.py  train_classifier_for_debugging.py
(+2 files in other folders)
