[metadata]
name = sklearn4x
version = 0.0.4
author = Mohammad Ali Yektaie
author_email = ma_yektaie@outlook.com
description = Packages sklearn models into a binary archive to be used in other languages.
long_description_content_type = text/markdown
long_description = Packages sklearn models into a binary archive to be used in other languages.
keywords =
    python
    sklearn
    edge
    machine learning
    ML
    AI
    Artificial Intelligence
    Java
    C#
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
packages = find:
install_requires =
    scikit-learn
    numpy

[options.packages.find]
exclude =
    tests
    deployment
